--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-ddd-solid-clean-designpatern",
+  "name": "apicleanarchiteture",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "apicleanarchiteture": "file:"
+  }
 }
