--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/mongoose": "^5.11.97",
     "apicleanarchiteture": "file:",
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
     "ts-node-dev": "^2.0.0",
