--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
     "apicleanarchiteture": "file:",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
