--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "lib": ["ES6", "DOM"],
     "rootDir": "./src",
     "baseUrl": ".",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
